# Getting-Started-with-Quantization

./: .gitignore  Dockerfile  README.md  benchmark_commands.md  download_model.sh  entrypoint.sh  pyproject.toml  wip.txt
.cursor/: cursor_settings.code-profile
.github/workflows/: docker-publish.yml
configs/: profile_baseline.yaml  profile_inductor.yaml  profile_inductor_bf16.yaml  profile_inductor_gemlite.yaml  profile_inductor_torchao.yaml  profile_sanity_check.yaml  profile_template.yaml
configs/reference_generation_configs/: unsloth_gemma_3_270m.yaml
low_bit_inference/: baseline.py  compile_inductor_full.py  compile_tensorrt_full.py  gemlite_demo.py  gemlite_exp.py  hf_loader.py  hf_utils.py  kv_cache_optim.py  model.py  torch_baseline.py  torchao_autoquant.py  torchao_exp.py  torchinductor.py  torchinductor_autoquant.py  torchinductor_fp1_full.py  torchinductor_fp4_full.py  torchinductor_fp6wo.py  torchinductor_fp8.py  torchinductor_fp8wo.py  torchinductor_int4.py  torchinductor_int4wo.py  torchinductor_int8.py  torchinductor_int8wo.py  torchinductor_tuned.py
low_bit_inference/configs/: profile_baseline.yaml
low_bit_inference/gemlite/: fp1_full.py  fp4_full.py  int4_full.py
low_bit_inference/gemlite_exp/: A_bf16_W_fp1_58.py  A_bf16_W_int1.py  A_bf16_W_int4.py  A_bf16_W_int8.py  A_bf16_W_mxfp4.py  A_bf16_W_mxfp8.py  A_int8_W_fp1_58.py  A_int8_W_int8.py  A_mxfp4_W_mxfp4.py  A_mxfp8_W_mxfp8.py  A_nvfp4_W_nvfp4.py
low_bit_inference/hta_profiler_futurework/: hta.ipynb
low_bit_inference/optims/: README.md  activation_optim.py  attention_optim.py  cache_optim.py  decode_optim.md  decode_optim.py  generation_optim.py  gradient_checkpoint_optim.py  kv_cache_optim.py  liger_rms_norm.py  masking_optim.py  model_output_optim.py  rope_optim.py
low_bit_inference/torchao/: A_bf16_W_int8.py  fp6wo.py  fp8wo.py  mxfp4wo.py
low_bit_inference/torchao_exp/: autoquant.py
low_bit_inference/utils/: _memory_viz.py  compile_utils.py  config_utils.py  gemlite_utils.py  generic_utils.py  hf_utils.py  model_configuration_utils.py  model_utils.py  modeling_utils.py  processing_utils.py  profile_utils.py  tokenize_utils.py
low_bit_vllm/: baseline.py  config_utils.py  hf_utils.py
low_bit_vllm/configs/: profile_baseline.yaml
low_bit_vllm/gemlite/: main.py
tl_out/: chromium_events.json  compile_directory.json  index.html
tl_out/-_0_0_0/: aot_forward_graph_fw_metadata_4.txt  aot_inference_graph_5.txt  aotautograd_cache_bypass_13.json  before_recompile_post_grad_8.txt  compilation_metrics_15.html  dynamo_cpp_guards_str_14.txt  dynamo_output_graph_0.txt  fx_graph_cache_bypass_12.json  fx_graph_runnable_7.txt  inductor_output_code_c77x53vq3nmesbhjrhv4ifqyh3vmbbud3szudkcvxascsuyw2eg5_11.html  inductor_output_code_cr2cz5tj5k35vsgapuhyey254m2z2yrwiiov56ndjgdanhtbk65c_11.html  inductor_post_grad_graph_10.txt  inductor_pre_grad_graph_1.txt
tl_out/-_0_1_0/: after_recompile_post_grad_42.txt  aot_forward_graph_fw_metadata_37.txt  aot_inference_graph_38.txt  aotautograd_cache_bypass_46.json  before_recompile_post_grad_41.txt  before_recompile_pre_grad_35.txt  compilation_metrics_48.html  dynamo_cpp_guards_str_47.txt  fx_graph_cache_bypass_45.json  fx_graph_runnable_40.txt  inductor_output_code_c7e5k7sm5ystf3uigkrds76drqecxuxue4guncjedi4hhdx4i6vp_44.html  inductor_pre_grad_graph_34.txt  recompile_reasons_32.json
tl_out/-_1_0_0/: after_recompile_post_grad_25.txt  after_recompile_pre_grad_19.txt  aot_forward_graph_fw_metadata_20.txt  aot_inference_graph_21.txt  aotautograd_cache_bypass_29.json  (+9 more)
(+45 files in other folders)
